src/test/ui/lub-glb/old-lub-glb-object.stderr
error[E0308]: mismatched types
  --> $DIR/old-lub-glb-object.rs:7:13
   |
LL |       let z = match 22 {
   |  _____________^
LL | |
LL | |         0 => x,
LL | |         _ => y,
LL | |     };
   | |_____^ one type is more general than the other
   |
   = note: expected trait object `dyn for<'a, 'b> Foo<&'a u8, &'b u8>`
              found trait object `dyn for<'a> Foo<&'a u8, &'a u8>`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
